thêm khúc footer cho license

--- a/license.html
+++ b/license.html
@@ -285,6 +285,52 @@
         should also get your employer (if you work as a programmer) or school,<br><br>if any, to sign a "copyright disclaimer" for the program, if necessary.<br><br>For more information on this, and how to apply and follow the GNU GPL, see<br><br>.<br><br><br><br>&nbsp;The
         GNU General Public License does not permit incorporating your program<br><br>into proprietary programs.&nbsp;If your program is a subroutine library, you<br><br>may consider it more useful to permit linking proprietary applications with<br><br>the
         library.&nbsp;If this is what you want to do, use the GNU Lesser General<br><br>Public License instead of this License.&nbsp;But first, please read<br><br>.<br><br></h6>
+    <div class="highlight-blue">
+        <div class="container">
+            <div class="intro">
+                <h2 class="text-center">Install Kode today</h2>
+                <p class="text-center">Free and open source to day, forever</p>
+            </div>
+            <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
+        </div>
+    </div>
+    <div class="footer-clean">
+        <footer>
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Tools</h3>
+                        <ul>
+                            <li><a href="https://kodelang.dev/kodestudio.html">Kode Studio</a></li>
+                            <li><a href="https://kodelang.dev/cli">Kode CLI</a></li>
+                            <li><a href="https://kodelang.dev/kodepas.html">KodePas</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>Resource</h3>
+                        <ul>
+                            <li><a href="https://kodelang.dev/docs.html">Document</a></li>
+                            <li><a href="https://kodelang.dev/community.html">Community</a></li>
+                            <li><a href="https://kodelang.dev/donate.html">Donate</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-4 col-md-3 item">
+                        <h3>More</h3>
+                        <ul>
+                            <li><a href="https://kodelang.dev/contact.html">Contact</a></li>
+                            <li><a href="https://kodelang.dev/jobs.html">Jobs</a></li>
+                            <li><a href="https://kodelang.dev/terms.html">Terms</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 item social"><a href="https://www.facebook.com/kode.page"><i class="icon ion-social-facebook"></i></a><a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A"><i class="icon ion-social-youtube"></i></a><a href="https://www.github.com/kodestudio"><i class="icon ion-social-github"></i></a>
+                        <a
+                            href="https://www.instagram.com/kode.page"><i class="icon ion-social-instagram"></i></a>
+                            <p class="copyright">Kode © 2020</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
