Chỉnh sửa thông tin page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contacts</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
@@ -62,7 +62,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Kode good for</h1>
+                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Kode is brilliant for</h1>
                 </div>
             </div>
             <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
@@ -86,7 +86,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Hibrid Development</h4>
+                            <h4 class="card-title">Hybrid Development</h4>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/iot.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Internet of Thing</h4>
+                            <h4 class="card-title">Internet of Things</h4>
                         </div>
                     </div>
                 </div>
@@ -128,37 +128,37 @@
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">code</i>
                         <h3 class="name">Easy to code</h3>
-                        <p class="description">Kode uses programming languages ​​are KodeLang and Pascal. Both languages ​​are very easy</p>
+                        <p class="description">KodeLang and Pascal are the programming languages used to power Kode. Both of them are not difficult to experience and learn.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">swap_vertical_circle</i>
-                        <h3 class="name">Save time, money,...</h3>
+                        <h3 class="name">Saves time, money,...</h3>
                         <p class="description">From one base code, Kode can be built and run on many platforms. This saves money, time and manpower.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">tag_faces</i>
-                        <h3 class="name">Beutiful UI/UX</h3>
-                        <p class="description">The interface and user experience of Kode-making applications are friendly and modern, in line with the design trend.</p>
+                        <h3 class="name">Beautiful UI/UX Design</h3>
+                        <p class="description">The interface and user experience of Kode-making applications are friendly and modern, in line with the designing trends.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">widgets</i>
                         <h3 class="name">A lot of package</h3>
-                        <p class="description">Packages are used for many purposes. In addition the community also contributes a lot of packages.</p>
+                        <p class="description">Packages are used for many purposes. In addition, the community also contributes a lot of packages.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">access_time</i>
                         <h3 class="name">Fast</h3>
-                        <p class="description">The software made by Kode is extremely fast operating speed on many platforms. This gives the best user experience.</p>
+                        <p class="description">The software made by Kode is extremely fast in terms of operating speed on many platforms. This gives the significant user experience.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-simplybuilt icon"></i>
                         <h3 class="name"><strong>Friendly tools</strong></h3>
-                        <p class="description">Kode provides friendly software development tools. There are both CLI and GUI.</p>
+                        <p class="description">Kode provides easy-to-use software development tools, such as CLI and GUI.</p>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
     <div class="projects-horizontal">
         <div class="container swing animated">
             <div class="intro">
-                <h2 class="text-center"><strong>Salient features</strong><br></h2>
+                <h2 class="text-center"><strong>Slient features</strong><br></h2>
             </div>
             <div class="row projects">
                 <div class="col-sm-6 item">
@@ -201,7 +201,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/lang.png"></a></div>
                         <div class="col">
-                            <h3 class="name">Other language</h3>
+                            <h3 class="name">Other languages</h3>
                             <p class="description">Kode can combine many other languages. This increases the power and diversity.<br></p>
                         </div>
                     </div>
