Chỉnh sửa thông tin page

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-6 text-left">
                     <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform made from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
                     <a
                         class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
@@ -122,7 +122,7 @@
     <div class="features-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Features </h2>
+                <h2 class="text-center">Features</h2>
             </div>
             <div class="row justify-content-center shake animated features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">widgets</i>
-                        <h3 class="name">A lot of package</h3>
+                        <h3 class="name">Diverse packages</h3>
                         <p class="description">Packages are used for many purposes. In addition, the community also contributes a lot of packages.</p>
                     </div>
                 </div>
@@ -259,7 +259,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">KodePas</h4>
-                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center actions" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);font-size: 19px;">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center actions" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);font-size: 19px;">Learn more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;color: rgb(214,217,221);">
@@ -267,7 +267,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title" style="color: rgb(46,72,98);">KodeLang</h4>
-                            <h6 class="text-muted card-subtitle mb-2">New programing language form Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">New programing language built from Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
@@ -275,7 +275,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Compiler</h4>
-                            <h6 class="text-muted card-subtitle mb-2">The compiler for KodeLang and Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">The compiler for KodeLang and Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Studio</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Smart IDE for Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Smart IDE for Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;color: rgb(214,217,221);">
@@ -293,7 +293,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title" style="color: rgb(46,72,98);">Kode Store</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Where to publish the app make with Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Where to publish the app made with Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
@@ -301,7 +301,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Server</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Where to save packages, code of Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Where to save packages, code of Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
     <div class="team-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Team </h2>
+                <h2 class="text-center">About the team behind Kode</h2>
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
@@ -330,7 +330,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box"><img class="rounded-circle" src="assets/img/neonguyen.jpg">
                         <h3 class="name">Nguyễn Quang Anh</h3>
-                        <p class="title">maketing</p>
+                        <p class="title">marketing</p>
                         <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                     </div>
                 </div>
