--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="assets/css/Footer-Clean.css">
     <link rel="stylesheet" href="assets/css/Highlight-Blue.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
     <link rel="stylesheet" href="assets/css/Navigation-with-Button.css">
     <link rel="stylesheet" href="assets/css/Products-UI.css">
     <link rel="stylesheet" href="assets/css/Projects-Horizontal.css">
@@ -39,7 +39,7 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/platform.html">Platform</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/docs.html">Docs</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://www.kodelang.dev/community.html">Community</a></li>
-                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contacts</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/contact.html">Contact</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
@@ -49,7 +49,7 @@
             <div class="row">
                 <div class="col-md-6 text-left">
                     <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform made from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform make from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
                     <a
                         class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
@@ -62,7 +62,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
-                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Kode is brilliant for</h1>
+                    <h1 class="text-center" style="padding-top: 25px;padding-bottom: 25px;">Kode brilliant for</h1>
                 </div>
             </div>
             <div class="row d-flex d-sm-flex justify-content-center justify-content-sm-center">
@@ -86,7 +86,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/hibrid.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Hybrid Development</h4>
+                            <h4 class="card-title">Hibrid Development</h4>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/iot.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Internet of Things</h4>
+                            <h4 class="card-title">Internet of Thing</h4>
                         </div>
                     </div>
                 </div>
@@ -122,43 +122,43 @@
     <div class="features-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">Features</h2>
+                <h2 class="text-center">Features </h2>
             </div>
             <div class="row justify-content-center shake animated features">
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">code</i>
                         <h3 class="name">Easy to code</h3>
-                        <p class="description">KodeLang and Pascal are the programming languages used to power Kode. Both of them are not difficult to experience and learn.</p>
+                        <p class="description">KodeLang and Pascal are the programming languages used to power Kode. Both of them are not difficult to experience and learn.<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">swap_vertical_circle</i>
-                        <h3 class="name">Saves time, money,...</h3>
+                        <h3 class="name">Save time, money,...</h3>
                         <p class="description">From one base code, Kode can be built and run on many platforms. This saves money, time and manpower.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">tag_faces</i>
-                        <h3 class="name">Beautiful UI/UX Design</h3>
-                        <p class="description">The interface and user experience of Kode-making applications are friendly and modern, in line with the designing trends.</p>
+                        <h3 class="name">Beutiful UI/UX</h3>
+                        <p class="description">The interface and user experience of Kode-making applications are friendly and modern, in line with the design trend.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">widgets</i>
-                        <h3 class="name">Diverse packages</h3>
-                        <p class="description">Packages are used for many purposes. In addition, the community also contributes a lot of packages.</p>
+                        <h3 class="name">Diverse package</h3>
+                        <p class="description">Packages are used for many purposes. In addition the community also contributes a lot of packages.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="material-icons icon">access_time</i>
                         <h3 class="name">Fast</h3>
-                        <p class="description">The software made by Kode is extremely fast in terms of operating speed on many platforms. This gives the significant user experience.</p>
+                        <p class="description">The software made by Kode is extremely fast operating speed on many platforms. This gives the best user experience.</p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div class="box"><i class="fa fa-simplybuilt icon"></i>
                         <h3 class="name"><strong>Friendly tools</strong></h3>
-                        <p class="description">Kode provides easy-to-use software development tools, such as CLI and GUI.</p>
+                        <p class="description">Kode provides friendly software development tools. There are both CLI and GUI.</p>
                     </div>
                 </div>
             </div>
@@ -167,7 +167,7 @@
     <div class="projects-horizontal">
         <div class="container swing animated">
             <div class="intro">
-                <h2 class="text-center"><strong>Slient features</strong><br></h2>
+                <h2 class="text-center"><strong>Salient features</strong><br></h2>
             </div>
             <div class="row projects">
                 <div class="col-sm-6 item">
@@ -201,7 +201,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-5"><a href="#"><img class="img-fluid" src="assets/img/lang.png"></a></div>
                         <div class="col">
-                            <h3 class="name">Other languages</h3>
+                            <h3 class="name">Other language</h3>
                             <p class="description">Kode can combine many other languages. This increases the power and diversity.<br></p>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">KodePas</h4>
-                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center actions" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);font-size: 19px;">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">The SDK for Kode</h6><button class="btn btn-primary active btn-sm text-center actions" type="button" style="background-color: #4396ee;color: rgb(255,255,255);filter: blur(0px) brightness(100%) contrast(100%) grayscale(0%) hue-rotate(0deg);font-size: 19px;">See more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;color: rgb(214,217,221);">
@@ -267,7 +267,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title" style="color: rgb(46,72,98);">KodeLang</h4>
-                            <h6 class="text-muted card-subtitle mb-2">New programing language built from Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">New programing language form Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
@@ -275,7 +275,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Compiler</h4>
-                            <h6 class="text-muted card-subtitle mb-2">The compiler for KodeLang and Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">The compiler for KodeLang and Pascal</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
                     </div>
                 </div>
             </div>
@@ -285,7 +285,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,114,66,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Studio</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Smart IDE for Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Smart IDE for Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;color: rgb(214,217,221);">
@@ -293,7 +293,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title" style="color: rgb(46,72,98);">Kode Store</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Where to publish the app made with Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Where to publish the app make with Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
                     </div>
                 </div>
                 <div class="col-md-3" style="max-width: 75%;min-width: 33.3333%;">
@@ -301,7 +301,7 @@
                         <div class="text-center border rounded shadow invisible" style="background-color: rgba(249,221,22,0);"><img class="img-fluid" src="assets/img/favicon.png"></div>
                         <div class="card-body text-center">
                             <h4 class="card-title">Kode Server</h4>
-                            <h6 class="text-muted card-subtitle mb-2">Where to save packages, code of Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">Learn more</button></div>
+                            <h6 class="text-muted card-subtitle mb-2">Where to save packages, code of Kode</h6><button class="btn btn-light active" type="button" style="background-color: #4396ee;color: rgb(255,255,255);">See more</button></div>
                     </div>
                 </div>
             </div>
@@ -310,7 +310,7 @@
     <div class="team-boxed">
         <div class="container">
             <div class="intro">
-                <h2 class="text-center">About the team behind Kode</h2>
+                <h2 class="text-center">Team </h2>
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item">
@@ -330,7 +330,7 @@
                 <div class="col-md-6 col-lg-4 item">
                     <div class="box"><img class="rounded-circle" src="assets/img/neonguyen.jpg">
                         <h3 class="name">Nguyễn Quang Anh</h3>
-                        <p class="title">marketing</p>
+                        <p class="title">maketing</p>
                         <div class="social"><a href="#"><i class="fa fa-facebook-official"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-instagram"></i></a></div>
                     </div>
                 </div>
@@ -397,7 +397,7 @@
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.1.1/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
 </body>
 
 </html>
