--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
                     <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform make from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
                     <a
-                        class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
+                        class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/donate" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
                     <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/app.png"></picture>
                 </div>
