--- a/quocthinhvo.html
+++ b/quocthinhvo.html
@@ -48,60 +48,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-left">
-                    <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Donate to Kode better</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode works based on community contributions. Your donation is the source of energy for Kode to grow.<br></p>
-                </div>
+                    <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
+                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform make from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                    <a
+                        class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/donate" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
                 <div class="col-md-6">
-                    <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/donate.png"></picture>
+                    <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/app.png"></picture>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="highlight-blue">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Install Kode today</h2>
-                <p class="text-center">Free and open source to day, forever</p>
-            </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
-        </div>
-    </div>
-    <div class="footer-clean">
-        <footer>
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Tools</h3>
-                        <ul>
-                            <li><a href="https://kodelang.dev/kodestudio.html">Kode Studio</a></li>
-                            <li><a href="https://kodelang.dev/cli">Kode CLI</a></li>
-                            <li><a href="https://kodelang.dev/kodepas.html">KodePas</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>Resource</h3>
-                        <ul>
-                            <li><a href="https://kodelang.dev/docs.html">Document</a></li>
-                            <li><a href="https://kodelang.dev/community.html">Community</a></li>
-                            <li><a href="https://kodelang.dev/donate.html">Donate</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-sm-4 col-md-3 item">
-                        <h3>More</h3>
-                        <ul>
-                            <li><a href="https://kodelang.dev/contact.html">Contact</a></li>
-                            <li><a href="https://kodelang.dev/jobs.html">Jobs</a></li>
-                            <li><a href="https://kodelang.dev/terms.html">Terms</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-lg-3 item social"><a href="https://www.facebook.com/kode.page"><i class="icon ion-social-facebook"></i></a><a href="https://www.youtube.com/channel/UCNE3g4pFx40HJrnBoHzgJ8A"><i class="icon ion-social-youtube"></i></a><a href="https://www.github.com/kodestudio"><i class="icon ion-social-github"></i></a>
-                        <a
-                            href="https://www.instagram.com/kode.page"><i class="icon ion-social-instagram"></i></a>
-                            <p class="copyright">Kode © 2020</p>
-                    </div>
-                </div>
-            </div>
-        </footer>
     </div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
