--- a/texthider.html
+++ b/texthider.html
@@ -46,15 +46,7 @@
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
     </nav>
-    <div class="highlight-blue">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">Install Kode today</h2>
-                <p class="text-center">Free and open source to day, forever</p>
-            </div>
-            <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
-        </div>
-    </div>
+    <iframe src="https://tranxuanthang.github.io/zwc-datahider/" width="100%" height="660"></iframe>
     <div class="footer-clean">
         <footer>
             <div class="container">
