--- a/mininote/read.html
+++ b/mininote/read.html
@@ -14,7 +14,7 @@
         <div class="container alert alert-info text-center">
             <strong id="appname">Mini Notes</strong><br>
         </div>
-        <p id="content">
-        </p>
+        <div id="content">
+        </div>
     </body>
 </html>
