Thêm status.json

--- a/status/index.html
+++ b/status/index.html
@@ -12,4 +12,7 @@
         <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/index.css">
     </head>
+    <body>
+        
+    </body>
 </html>
