Thêm tệp GitHub.js để REST data từ github

--- a/status/index.html
+++ b/status/index.html
@@ -5,12 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Kode Status</title>
         <!--Bootstrap và Jquery-->
-        <script src="bootstrap/js/bootstrap.js"></script>
         <script src="jquery/jquery.min.js"></script>
+        <script src="bootstrap/js/bootstrap.js"></script>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <!--end of Bootstrap và JQuery-->
         <script src="js/index.js"></script>
         <link rel="stylesheet" href="css/index.css">
+        <script src="js/github.js"></script>
     </head>
     <body>
         
