--- a/tools/texthider/texthider.html
+++ b/tools/texthider/texthider.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
     <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
     <link rel="icon" type="image/png" sizes="200x200" href="assets/img/favicon.png">
-    <link rel="stylesheet" href="/././assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="././assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Condensed">
     <link rel="stylesheet" href="/./assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="/./assets/fonts/ionicons.min.css">
