Hoàn thành tính năng lấy danh sách repo

--- a/feeds/index.html
+++ b/feeds/index.html
@@ -15,9 +15,8 @@
         <script src="js/index.js"></script>
     </head>
     <body onLoad="init()">
-        <ul class="list-group" id="listview_repos" style="width: 80%; margin-left: auto; margin-right: auto;">
+        <div id="listview_repos" style="width: 80%; margin-left: auto; margin-right: auto;">
             
-        </ul>
-       
+        </div>
     </body>
 </html>
