--- a/feeds/index.html
+++ b/feeds/index.html
@@ -15,7 +15,7 @@
         <script src="js/index.js"></script>
     </head>
     <body onLoad="init()">
-        <div id="listview_repos" style="width: 80%; margin-left: auto; margin-right: auto;">
+        <div id="listview_repos">
             
         </div>
     </body>
