--- a/feeds/card.html
+++ b/feeds/card.html
@@ -7,17 +7,16 @@
     <div class="card shadow">
         <div class="card-header">
             <strong id="name">NameRepoValue</strong> 
-            <i id="language" style="float: right;">Pascal</i>
+            <i id="language" style="float: right;">LanguageRepoValue</i>
         </div>
         <div class="card-body">
             <p id="des" class="card-text">DesRepoValue</p>
         </div>
         <div class="card-footer">
             <a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a>
-            <a id="viewGithub" href="UrlGitHubValue"><button class="btn btn-primary">GitHub</button></a>
-            <button class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button>
-            <button class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button>
-            <button class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button>
+            <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button>
+            <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button>
+            <button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button>
         </div>
     </div>
 </li>
@@ -29,5 +28,8 @@
 ///////////////////////////////
 
 <li class="list-group-item list-group-item-action">
-<div class="card shadow"><div class="card-header"><strong id="name">NameRepoValue</strong> <i id="language" style="float: right;">Pascal</i></div><div class="card-body"><p id="des" class="card-text">DesRepoValue</p></div><div class="card-footer"><a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a><a id="viewGithub" href="UrlGitHubValue"><button class="btn btn-primary">GitHub</button></a><button class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button><button class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button><button class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button></div></div>
+<div class="card shadow"><div class="card-header"><strong id="name">NameRepoValue</strong> <i id="language" style="float: right;">LanguageRepoValue</i></div><div class="card-body"><p id="des" class="card-text">DesRepoValue</p></div><div class="card-footer"><a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a><a id="viewGithub" href="UrlGitHubValue"><button class="btn btn-primary">GitHub</button></a><button class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button><button class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button><button class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button></div></div>
 </li>
+
+
+<li class="list-group-item list-group-item-action"><div class="card shadow"><div class="card-header"><strong id="name">NameRepoValue</strong><i id="language" style="float: right;">LanguageRepoValue</i></div><div class="card-body"><p id="des" class="card-text">DesRepoValue</p></div><div class="card-footer"><a id="viewFeeds"><button class="btn btn-primary">Feeds</button></a><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="star" class="fas fa-star">StarRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="watch" class="fas fa-eye">WatchRepoValue</i></button><button style="margin-left: 10px;" class="btn btn-outline-danger"><i id="fork" class="fas fa-share">ForkRepoValue</i></button></div></div></li>
