Thêm hàm tìm chuỗi truy vấn

--- a/feeds/index.html
+++ b/feeds/index.html
@@ -13,10 +13,11 @@
         <link rel="stylesheet" href="css/index.css">
         <script src="js/github.js"></script>
         <script src="js/index.js"></script>
+        <script src="js/url.js"></script>
     </head>
     <body onLoad="init()">
         <div id="listview_repos">
-            
         </div>
+
     </body>
 </html>
