Thêm thông báo khi load 100% dữ liệu

--- a/feeds/index.html
+++ b/feeds/index.html
@@ -20,21 +20,8 @@
         </div>
        
 
-        <!--Dia log thông báo-->
-        <div class="modal" id="dialog">
-            <div class="modal-dialog">
-                <div class="modal-content modal-dialog-centered">
-                    <div class="modal-header">
-                        <strong id="title">Title of dialog</strong>
-                    </div>
-                    <div class="modal-body">
-                        <p id="content">Content of dialog</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button class="btn btn-danger" style="float: right;">Exit</button>
-                    </div>
-                </div>
-            </div>
+        <div class="alert alert-primary text-center" id="alert" style="visibility: hidden;">
+            <strong id="title">Nội dung ở đây</strong>
         </div>
     </body>
 </html>
