Đổi màu thông báo hết data

--- a/feeds/index.html
+++ b/feeds/index.html
@@ -19,8 +19,7 @@
         <div id="listview_repos">
         </div>
        
-
-        <div class="alert alert-primary text-center" id="alert" style="visibility: hidden;">
+        <div class="alert alert-warning text-center" id="alert" style="visibility: hidden">
             <strong id="title">Nội dung ở đây</strong>
         </div>
     </body>
