Thêm tính năng load issues

--- a/feeds/view.html
+++ b/feeds/view.html
@@ -7,6 +7,7 @@
         <!--Bootstrap và Jquery-->
         <script src="jquery/jquery.min.js"></script>
         <script src="bootstrap/js/bootstrap.js"></script>
+        <script src="showdown/showdown.js"></script>
         <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
         <!--end of Bootstrap và JQuery-->
@@ -16,8 +17,8 @@
         <script src="js/url.js"></script>
     </head>
     <body onLoad="init()">
-        <div id="listview_repos">
+        <div id="listview_feeds" class="list-group">
         </div>
-
+        
     </body>
 </html>
