Add webpage title
What? Website won't be itself with a nice and comfy title! :))

--- a/feeds/index.html
+++ b/feeds/index.html
@@ -16,6 +16,7 @@
         <script src="js/url.js"></script>
     </head>
     <body onLoad="init()">
+        <h2 class="text-primary text-center "> Kode's Enormous Feed System (K.E.F.S.) </h1>
         <div id="listview_repos">
         </div>
        
