--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                     <div class="card border rounded shadow">
                         <div class="text-center border rounded shadow" style="background-color: rgba(0,128,255,0);"><img class="img-fluid" src="assets/img/iot.png"></div>
                         <div class="card-body text-center">
-                            <h4 class="card-title">Internet of Thing</h4>
+                            <h4 class="card-title">Internet of Things</h4>
                         </div>
                     </div>
                 </div>
@@ -354,7 +354,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Install Kode today</h2>
-                <p class="text-center">Free and open source to day, forever</p>
+                <p class="text-center">Free and open source forever</p>
             </div>
             <div class="buttons"><a class="btn btn-primary" role="button" href="https://kodelang.dev/get-started.html">Getting started</a><a class="btn btn-primary" role="button" href="https://www.github.com/kodestudio">github repo</a></div>
         </div>
