--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
     </nav>
+    <div class="alert alert-info" role="alert"><span style="margin-right: 15px;"><strong>Sự kiện: Kode tại Ngày Hội Sáng Tạo - Công Nghệ (11/10/2020)</strong></span><button class="btn btn-primary" type="button">Xem chi tiết</button></div>
     <div class="text-center">
         <div class="container">
             <div class="row">
