--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
 </head>
 
 <body class="text-center" style="color: rgb(46,72,98);">
-    <nav class="navbar navbar-light navbar-expand-md sticky-top bounce animated navigation-clean-button">
+    <div class="alert alert-info bounce animated" role="alert"><span style="margin-right: 15px;"><strong>Sự kiện: Kode tại Ngày Hội Sáng Tạo - Công Nghệ (11/10/2020)</strong></span><a class="btn btn-success action-button" role="button" href="https://kodelang.dev/events/ngay-hoi-sang-tao-cong-nghe-2020.html" style="margin-right: 10px;">Xem chi tiết</a></div>
+    <nav
+        class="navbar navbar-light navbar-expand-md sticky-top bounce animated navigation-clean-button">
         <div class="container"><a class="navbar-brand" href="https://kodelang.dev">Kode</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse"
                 id="navcol-1">
@@ -45,22 +47,20 @@
                     <li class="nav-item" role="presentation"><a class="nav-link" href="https://kodelang.dev/donate.html">Donate</a></li>
                 </ul><span class="navbar-text actions"> <a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="margin-right: 10px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/get-started.html">Get Started</a></span></div>
         </div>
-    </nav>
-    <div class="alert alert-info bounce animated infinite" role="alert"><span style="margin-right: 15px;"><strong>Sự kiện: Kode tại Ngày Hội Sáng Tạo - Công Nghệ (11/10/2020)</strong></span><a class="btn btn-success action-button" role="button" href="https://kodelang.dev/events/ngay-hoi-sang-tao-cong-nghe-2020.html" style="margin-right: 10px;">Xem chi tiết</a></div>
-    <div
-        class="text-center">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6 text-left">
-                    <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
-                    <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform make from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
-                    <a
-                        class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/donate" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
-                <div class="col-md-6">
-                    <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/app.png"></picture>
+        </nav>
+        <div class="text-center">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 text-left">
+                        <h1 class="display-4 text-left" data-aos="fade" style="font-size: 57px;font-family: 'Roboto Condensed', sans-serif;margin-top: 151px;">Make great app with Kode</h1>
+                        <p class="text-left bounce animated" style="font-size: 22px;font-family: 'Roboto Condensed', sans-serif;">Kode is free and open source platform make from FPC and LCL project for building powerful applications.<br></p><a class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(254,255,255);">Getting Started</a>
+                        <a
+                            class="btn btn-light action-button" role="button" href="https://www.github.com/kodestudio" style="background-color: rgb(33,130,227);color: rgb(250,253,255);margin-left: 15px;">GitHub Repo</a><a class="btn btn-light action-button" role="button" href="https://kodelang.dev/donate" style="background-color: rgb(33,130,227);color: rgb(255,255,255);margin-left: 15px;">Donate</a></div>
+                    <div class="col-md-6">
+                        <picture><img class="img-fluid" data-bs-hover-animate="pulse" src="assets/img/app.png"></picture>
+                    </div>
                 </div>
             </div>
-        </div>
         </div>
         <div style="margin-top: 50px;margin-bottom: 50px;">
             <div class="container-fluid">
