--- a/feeds/neon/index.html
+++ b/feeds/neon/index.html
@@ -27,6 +27,7 @@
         <script src="bootstrap/js/bootstrap.min.js"></script>
         <!--Load font-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css">
+         <script src="project.js"></script>
     </head>
     <!--onload() is a function run affter page load complete-->
     <body onLoad="init()">
