--- a/feeds/index.html
+++ b/feeds/index.html
@@ -14,6 +14,7 @@
         <script src="js/github.js"></script>
         <script src="js/index.js"></script>
         <script src="js/url.js"></script>
+        <script src="project.js"></script>
     </head>
     <body onLoad="init()">
         <h2 class="text-primary text-center "> Kode's Enormous Feed System (K.E.F.S.) </h1>
